Product proto is merged into store proto
